# individual-sandbox

./: .gitignore  .gitmodules  README.md  gen.sh  go.mod  go.sum  go.work  go.work.sum
20160625/: readme.md
20160625/example_profile/: 01simple-use.py  02profile-directly.py  03profile-summary.py
20160625/example_urllib/: test_fake_requests.py
20160625/jsonmaker/: jsonmaker.py
20160628/: readme.md
20160628/example_urlencode/: 01_encode_decode.py
20160701/: readme.md
20160701/example-django/: prefetch_with_generic_foreign_key.py
20160708/: readme.md
20160708/example_fakemock/: fakemock.py
20160710/example_django/: dynamic_serializer.py  gen.sh
20160713/: readme.md
20160714/: pandas_with_orm.ipynb  readme.md
20160716/: readme.md  requirements.txt
20160716/examples_proxy/: 02_tls_echo_server.py  04_only_https.py  gen.sh  public.pem
20160720/: readme.md
20160720/example_lxml/: 01_collecting.py
20160720/examples_namedtuple/: 02_exact_check.py
20160722/: readme.md
20160724/: readme.md
20160725/example_new/: 01_new.py
20160729/: readme.md
20160729/foo/: setup.py
20160730/: readme.md
20160730/equality/: 01-primitive.go  03-dynamic.go
20160801/: readme.md
20160801/embed-conflict/: 02-conflict-child1-and-child2.go  03-embed-with-type-alias.go
20160801/json-output/: 02serialize.go  03serialize.go  04serialize.go  06serialize.go
20160807/: readme.md
20160807/copying-golang/: 02copied-by-fn2.go
20160807/dispatch-golang/: 00simple.go  01dispatch.go  02dispatch-reflect.go  03-dispatch-by-json.go
20160811/: readme.md
20160811/graph-package/: go_dot.py  go_toplevel.py
20160811/string-indentation/: 01-hmm.py
20160811/subprocess-examples/: 01call_ls.py  02call_sleep.py
20160815/string_cast_example/: 00-hello-deoptimize.asm  01-hello-deoptimize.asm  01-hello.asm  Makefile
daily/: .gitignore  Makefile  gen-go.sh  gen.sh  last.sh  recent.sh
daily/20160625/: readme.md
daily/20160626/: readme.md
daily/20160701/: readme.md
daily/20160713/: examples_pandas.ipynb  readme.md
daily/20160714/: examples_pandas.ipynb  readme.md
daily/20160716/: readme.md
daily/20160728/: readme.md
daily/20190725/example_pypackage/foo/: Makefile  setup.cfg  setup.py
daily/20191022/example_dbinspect/foo/: pyproject.toml
daily/20191022/example_dbinspect/foo/tests/: test_foo.py
daily/20191026/example_metashape/foo/: pyproject.toml
daily/20191104/example_pony/: pyproject.toml
daily/20191104/example_pony/00example/: .gitignore  Makefile  dump.sql  main.py  schema.sql
daily/20191104/example_pony/01metadata/: Column.md  Table.md  gen.py  output.md
daily/20191104/example_pony/02gen/: Makefile  gen.py  output.md
daily/20191104/example_pony/tests/: test_example_pony.py
daily/20201021/example_pypiserver/sample/: Makefile  README.md  setup.cfg  setup.py
daily/20201021/example_pypiserver/sample/sample/: __init__.py
daily/20220622/example_python/byebye-world/: pyproject.toml
daily/20220622/example_python/byebye-world/src/byebye_world/: __init__.py
daily/20220622/example_python/byebye-world/tests/: test_byebye_world.py
daily/20250709/example_python/: Makefile  README.md  pyproject.toml  report.md  test_it.py
(+12996 files in other folders)
