[tool.poetry]
name = "example_pony"
version = "0.1.0"
description = ""
authors = ["podhmo <ababjam61+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^0.12.17"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
