[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foo"
description = "foo"
readme = "README.md"
authors = []
version = "0.1.0"

[tool.hatch.envs.hatch-test]
dependencies = ["pytest", "black"]
default-args = ["-s", "test_it.py"]  # -s はstdoutをcaptureする。
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]


[tool.hatch.envs.default]
dependencies = ["black"]

[[tool.hatch.envs.default.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.build.targets.wheel]
packages = ["foo"]