[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["podhmo <ababjam61+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "=1.1.15"
sqlacodegen = "^2.1"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
