# see: https://setuptools.readthedocs.io/en/latest/setuptools.html#specifying-values
[metadata]
name = sample
version = file:VERSION

summary = -
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

url = https://github.com/podhmo/sample
author = podhmo
author_email = ababjam61+github@gmail.com

[options]
include_package_data = True
zip_safe = False

[bdist_wheel]
universal=0